--- a/slurm/slurm.h.in
+++ b/slurm/slurm.h.in
@@ -4672,10 +4672,10 @@ extern void slurm_free_reservation_info_msg(reserve_info_msg_t *resv_info_ptr);
 
 /*
  * slurm_ping - issue RPC to have Slurm controller (slurmctld)
- * IN controller - 1==primary controller, 2==secondary controller
+ * IN dest - controller to contact (0=primary, 1=backup, 2=backup2, etc.)
  * RET 0 or a slurm error code
  */
-extern int slurm_ping(int primary);
+extern int slurm_ping(int dest);
 
 /*
  * slurm_reconfigure - issue RPC to have Slurm controller (slurmctld)
@@ -4686,7 +4686,7 @@ extern int slurm_reconfigure(void);
 
 /*
  * slurm_shutdown - issue RPC to have Slurm controller (slurmctld)
- *	cease operations, both the primary and backup controller
+ *	cease operations, both the primary and all backup controllers
  *	are shutdown.
  * IN options - 0: all slurm daemons are shutdown
  *              1: slurmctld generates a core file
